--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>The History Of DragonBall Series</h1>
+    <h2> Dragonball</h2>
+    <p>Dragonball starts off as a manga called Dragon Boy.
+       The story depicteda young bot named tanton and his quest to return a princess to her homeland.
+      </p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <script src="final_project.js"></script>
