--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
   <body>
     <h1>The History Of DragonBall Series</h1>
     <h2> Dragonball</h2>
-    <p>Dragonball starts off as a manga called Dragon Boy.
-       The story depicteda young bot named tanton and his quest to return a princess to her homeland.
-      </p>
+    <P>Dragon Ball (ドラゴンボール, Doragon Bōru) is an adaptation of the first portion of Akira Toriyama's Dragon Ball manga. It is composed of 153 episodes around 20-minutes long and ran on Fuji TV from February 26, 1986 to April 12 1989.</P>
+    <h3>The Original Series </h3>
+    <p>Dragon Ball started off as a manga series called Dragon Boy. The story depicted a young boy named Tanton and his quest to return a princess to her homeland. The series was a loose adaptation of the Chinese legend Journey to the West, depicting monkey king Sun Wukong. Due to the series' unpopularity, Toriyama re-wrote Dragon Boy, adapting it as Dragon Ball. All the character's personalities were changed except for Goku. The re-adaptation named Dragon Ball became a hit.
+    </p>
+    <h3>Broadcast</h3>
+    <p>Two previous attempts at releasing Dragon Ball to American audiences failed. The first attempt was in 1989 from Harmony Gold USA (the company that previously dubbed Robotech). It featured strange name changes for nearly all the characters, such as changing Goku to "Zero" and Korin to "Whiskers the Wonder Cat". It was test-marketed in several cities, but was never broadcast to the general public; therefore it is referred to as "The Lost Dub" by fans.
+    </p>
+    <p>The second and more well-known attempt was in 1995 with only the first 13 episodes dubbed and aired in first-run syndication. This release was a joint-production between Funimation and BLT Productions, with Ocean Studios for the dubbing. These original 13 dubbed episodes were later released to DVD by KidMark as "Dragon Ball: The Saga of Goku."
+    </p>
+    <p>After Dragon Ball Z became immensely popular on Cartoon Network's Toonami block, Dragon Ball was re-translated into English by Funimation's in-house ADR studio for redistribution in the U.S. The complete original series aired on Cartoon Network's Toonami from August 20, 2001 to December 1, 2003. Unlike the theme songs for Dragon Ball Z and Dragon Ball GT, Funimation made English versions of the original Japanese opening (OP) and ending (ED) themes for these episodes and left in the original background music. Some insert (IN) songs were taken out or have talking over them.
+    </p>
+
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <script src="final_project.js"></script>
