--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </p>
     <p>After Dragon Ball Z became immensely popular on Cartoon Network's Toonami block, Dragon Ball was re-translated into English by Funimation's in-house ADR studio for redistribution in the U.S. The complete original series aired on Cartoon Network's Toonami from August 20, 2001 to December 1, 2003. Unlike the theme songs for Dragon Ball Z and Dragon Ball GT, Funimation made English versions of the original Japanese opening (OP) and ending (ED) themes for these episodes and left in the original background music. Some insert (IN) songs were taken out or have talking over them.
     </p>
+    <h3>Censorship</h3>
+    <p>The U.S. version of Dragon Ball that was aired on Cartoon Network (before that, it was aired in syndication and on NBC in select cities) had many edits done to it. Most of the edits were digital cosmetic changes, which were done to remove nudity and blood, and dialogue edits. Sometimes, some scenes were deleted altogether, either to save time or cut out strong violence.
+    </P>
 
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
