--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>The History Of DragonBall Series</h1>
     <h2> Dragonball</h2>
+    <img scr="https://sinqpopculture.files.wordpress.com/2010/02/dragon1.jpg">
     <P>Dragon Ball (ドラゴンボール, Doragon Bōru) is an adaptation of the first portion of Akira Toriyama's Dragon Ball manga.
       It is composed of 153 episodes around 20-minutes long and ran on Fuji TV from February 26, 1986 to April 12 1989.</P>
     <h3>The Original Series </h3>
@@ -36,6 +37,8 @@
     </p>
     <p>A lot of fans hated these changes, because they felt it was butchering the original show's humor and dumbing it down.
        These edits, however, were necessary in order to have the show aired on TV. The DVDs do not contain these edits.
+    </p>
+    <p>It's an interesting note on inconsistency in censorship that a scene in Dragon Ball where young Goku charges completely through King Piccolo, putting a hole in the villain's chest, was edited so that the hole was not shown for the American broadcast, but the same scene was shown on American TV later, in a flashback in a Dragon Ball Z episode, with the hole in King Piccolo's chest clearly visible.
     </p>
 
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
