--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
     </p>
     <p>It's an interesting note on inconsistency in censorship that a scene in Dragon Ball where young Goku charges completely through King Piccolo, putting a hole in the villain's chest, was edited so that the hole was not shown for the American broadcast, but the same scene was shown on American TV later, in a flashback in a Dragon Ball Z episode, with the hole in King Piccolo's chest clearly visible.
     </p>
-
+    <h2>Dragonball Z</h2>
+    <p>Dragon Ball Z (ドラゴンボールＺ, Doragon Bōru Zetto; commonly abbreviated as DBZ) is the long-running sequel to the anime Dragon Ball. The series is a close adaptation of the second (and far longer) portion of the Dragon Ball manga written and drawn by Akira Toriyama. In the United States, the manga's second portion is also titled Dragon Ball Z to prevent confusion for younger readers.
+    </p>
+    <h3>Overview</h3>
+    <p>Dragon Ball Z follows the adventures of the adult Goku who, along with his companions, defends the earth against an assortment of villains ranging from intergalactic space fighters and conquerors, unnaturally powerful androids and near indestructible magical creatures. While the original Dragon Ball anime followed Goku through childhood into adulthood, Dragon Ball Z is a continuation of his adulthood life, but at the same time parallels the maturation of his son, Gohan, as well as characters from Dragon Ball and more. The separation between the series is also significant as the latter series takes on a more dramatic and serious tone. The anime also features characters, situations and back-stories not present in the original manga.
+    </p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <script src="final_project.js"></script>
