--- a/index.html
+++ b/index.html
@@ -48,8 +48,28 @@
     <p>Dragon Ball Z (ドラゴンボールＺ, Doragon Bōru Zetto; commonly abbreviated as DBZ) is the long-running sequel to the anime Dragon Ball. The series is a close adaptation of the second (and far longer) portion of the Dragon Ball manga written and drawn by Akira Toriyama. In the United States, the manga's second portion is also titled Dragon Ball Z to prevent confusion for younger readers.
     </p>
     <h3>Overview</h3>
-    <p>Dragon Ball Z follows the adventures of the adult Goku who, along with his companions, defends the earth against an assortment of villains ranging from intergalactic space fighters and conquerors, unnaturally powerful androids and near indestructible magical creatures. While the original Dragon Ball anime followed Goku through childhood into adulthood, Dragon Ball Z is a continuation of his adulthood life, but at the same time parallels the maturation of his son, Gohan, as well as characters from Dragon Ball and more. The separation between the series is also significant as the latter series takes on a more dramatic and serious tone. The anime also features characters, situations and back-stories not present in the original manga.
+    <p>Dragon Ball Z follows the adventures of the adult Goku who, along with his companions, defends the earth against an assortment of villains ranging from intergalactic space fighters and conquerors, unnaturally powerful androids and near indestructible magical creatures.
+      While the original Dragon Ball anime followed Goku through childhood into adulthood, Dragon Ball Z is a continuation of his adulthood life, but at the same time parallels the maturation of his son, Gohan, as well as characters from Dragon Ball and more.
+      The separation between the series is also significant as the latter series takes on a more dramatic and serious tone.
+      The anime also features characters, situations and back-stories not present in the original manga.
     </p>
+    <p>The other names the production was considering for this second series before they settled on Dragon Ball Z were Dragon Ball: Gohan's Big Adventure, New Dragon Ball, Dragon Ball 2, Dragon Ball Wonder Boy, and Dragon Ball 90.
+       The anime first premiered in Japan on April 26, 1989 (on Fuji TV) at 7:30 p.m. and ended on January 31, 1996.
+       The series average rating was 20.5%, with its maximum being 27.5% (Episode 218) and its minimum being 12.1% (Episode 273).
+       Like Dragon Ball, the music for Dragon Ball Z was composed by Shunsuke Kikuchi.
+       The character designs for Dragon Ball Z were created by Minoru Maeda from the Raditz Saga to the Cell Games Saga and Katsuyoshi Nakatsuru from the Great Saiyaman Saga to the Kid Buu Saga.
+    </p>
+    <p>Toriyama's humor/parody manga Nekomajin, released after Dragon Ball and Dragon Ball Z, features several concepts introduced in the series, and several Dragon Ball Z characters make various appearances in this manga.
+       After Dragon Ball Z, the story of Goku and friends continues in the anime-only series Dragon Ball GT, which is not based on a manga by Akira Toriyama, but is a project by Toei Animation using the same characters and storyline that serves as a sequel to Dragon Ball Z.
+       19 years after the end of Dragon Ball Z in Japan, a new sequel series titled Dragon Ball Super premiered with original concepts by Akira Toriyama, taking place after the death of Kid Buu but before Dragon Ball Z's ending.
+    </p>
+    <p>In the U.S., the series initially aired in first-run syndication from September 13, 1996 to May 23, 1998, and then aired on Cartoon Network's Toonami block from August 31, 1998 to April 7, 2003, though not always with the same continuity of dubbing (for details on the dubbing problems, see Ocean Group dubs and Funimation dub).
+       In was also shown in Canada on YTV around the same time. It aired in the UK, with the same dubbing problem, on Cartoon Network, premiering on March 6, 2000 and running on that channel until 2002.
+       The Majin Buu Saga, Fusion Saga and Kid Buu Saga were later broadcast on CNX, which later changed its name to Toonami, with the show ending on February 28, 2003.
+       After the finished run, it was repeated daily, until Toonami merged with Cartoon Network Too.
+       In Australia it was shown on both Cartoon Network and the Australian Broadcasting Corporation with Cartoon Network airing it in around 1997-1999 and ABC from 1999-2004.
+       In New Zealand it was shown in TV3.</p>
+    <p>In April 2009, a new 'refresh' of Dragon Ball Z began airing on Japanese television. This re-cut is titled Dragon Ball Z Kai.</p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <script src="final_project.js"></script>
