--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>The History Of DragonBall Series</h1>
-    <h2> Dragonball</h2>
+    <h2><img src="http://img1.wikia.nocookie.net/__cb20130629030021/dragonball/images/4/4c/Dragon_Ball_Television_Series_North_America_Logo.png" width="400" height="100"></h2>
 
     <P><img src="https://sinqpopculture.files.wordpress.com/2010/02/dragon1.jpg" width="200" height="250">
       Dragon Ball (ドラゴンボール, Doragon Bōru) is an adaptation of the first portion of Akira Toriyama's Dragon Ball manga.
@@ -44,7 +44,7 @@
     </p>
     <p>It's an interesting note on inconsistency in censorship that a scene in Dragon Ball where young Goku charges completely through King Piccolo, putting a hole in the villain's chest, was edited so that the hole was not shown for the American broadcast, but the same scene was shown on American TV later, in a flashback in a Dragon Ball Z episode, with the hole in King Piccolo's chest clearly visible.
     </p>
-    <h2>Dragonball Z</h2>
+    <h2><img src="http://2.bp.blogspot.com/-ILygaNZIl1M/UBRuaUNyx3I/AAAAAAAAABM/zxGQyZR8Igs/s1600/dragon_ball_z_logo_by_elfaceitoso.png" width="400" height="100"></h2>
     <p>Dragon Ball Z (ドラゴンボールＺ, Doragon Bōru Zetto; commonly abbreviated as DBZ) is the long-running sequel to the anime Dragon Ball. The series is a close adaptation of the second (and far longer) portion of the Dragon Ball manga written and drawn by Akira Toriyama. In the United States, the manga's second portion is also titled Dragon Ball Z to prevent confusion for younger readers.
     </p>
     <h3>Overview</h3>
@@ -68,8 +68,29 @@
        The Majin Buu Saga, Fusion Saga and Kid Buu Saga were later broadcast on CNX, which later changed its name to Toonami, with the show ending on February 28, 2003.
        After the finished run, it was repeated daily, until Toonami merged with Cartoon Network Too.
        In Australia it was shown on both Cartoon Network and the Australian Broadcasting Corporation with Cartoon Network airing it in around 1997-1999 and ABC from 1999-2004.
-       In New Zealand it was shown in TV3.</p>
-    <p>In April 2009, a new 'refresh' of Dragon Ball Z began airing on Japanese television. This re-cut is titled Dragon Ball Z Kai.</p>
+       In New Zealand it was shown in TV3.In April 2009, a new 'refresh' of Dragon Ball Z began airing on Japanese television. This re-cut is titled Dragon Ball Z Kai.
+    </p>
+    <h3>Censorship Issues</h3>
+    <p>Dragon Ball Z was marketed to appeal to a wide range of viewers from all ages, and contains crude humor and occasional excesses of violence which are commonly seen as inappropriate for younger audiences by American standards.
+       When it was first marketed in the US, the distribution company Funimation alongside Saban decided to initially focus exclusively on the young children's market, because the anime market was still small compared to the much larger children's cartoon market.
+       This censorship often had unintentionally humorous results, such as changing all references to death so the dead characters were merely going to "another dimension", and digitally altering two ogres' shirts to read "HFIL" instead of "HELL".
+    </P>
+    <p>Starting with the Captain Ginyu Saga on Cartoon Network, censorship was reduced due to fewer restrictions on cable programming.
+       Funimation did the dubbing on their own this time around with their own voice actors.
+       In 2004, Funimation began to redub the first two sagas of Dragon Ball Z, to remove the problems that were caused from their previous partnership with Saban.
+       They also redubbed the first three movies.However, the show still retained some level of censorship, not out of FCC laws, but out of choice by Funimation, so as to cater to the possible sensitivity of western audiences.
+        For example, Mr. Satan was renamed "Hercule" to avoid any religious slurs; his daughter, Videl, was a play on the word "Devil", but Funimation felt that the connection was obscure enough to not worry about.
+     </p>
+     <h3>Differences and Filler</h3>
+     <p>Filler is used to pad out the series for many reasons; in the case of Dragon Ball Z, more often than not, it was because the anime was running alongside the manga, and there was no way for the anime to run ahead of the manga (since Toriyama was still writing it, at the same time).
+       The company behind the anime, Toei Animation, would occasionally make up their own side stories to either further explain things, or simply to extend the series.
+      Filler does not come only in the form of side stories, though; sometimes it is as simple as adding some extra attacks into a fight.
+       One of the more infamous examples of filler is the Frieza Saga. After Frieza had set the planet Namek to blow up in five minutes, the final fight between Goku and Frieza still lasted well over five episodes, much less five minutes, although this can be attributed to the fact that Namek simply took longer to explode than Frieza expected.
+       Also, there were many numerous filler scenes that took place while the battle with Frieza was in motion, which accounts for much of the footage during the planet's explosion.
+     </p>
+     <p>As the anime series was forced to expand 12 pages of manga text into 25 minutes of animation footage, these changes were introduced to kill time or to allow the (anime) writers to explore some other aspect of the series' universe.
+        The Garlic Jr. Saga (Garlic Jr.'s return from the Dragon Ball Z: Dead Zone movie) between the Frieza Saga and Trunks Saga, and the Other World Tournament between the Cell Games Saga and the Majin Buu Saga are both good examples of this.
+     </p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <script src="final_project.js"></script>
