--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
      <p>As the anime series was forced to expand 12 pages of manga text into 25 minutes of animation footage, these changes were introduced to kill time or to allow the (anime) writers to explore some other aspect of the series' universe.
         The Garlic Jr. Saga (Garlic Jr.'s return from the Dragon Ball Z: Dead Zone movie) between the Frieza Saga and Trunks Saga, and the Other World Tournament between the Cell Games Saga and the Majin Buu Saga are both good examples of this.
      </p>
+     <p>info by dragonball wiki</p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <script src="final_project.js"></script>
