--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<div class="multi_bg_example">
+  <html lang="en">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
@@ -91,9 +92,43 @@
      <p>As the anime series was forced to expand 12 pages of manga text into 25 minutes of animation footage, these changes were introduced to kill time or to allow the (anime) writers to explore some other aspect of the series' universe.
         The Garlic Jr. Saga (Garlic Jr.'s return from the Dragon Ball Z: Dead Zone movie) between the Frieza Saga and Trunks Saga, and the Other World Tournament between the Cell Games Saga and the Majin Buu Saga are both good examples of this.
      </p>
-     <p>info by dragonball wiki</p>
+     <p>Besides having filler scenes and episodes, there are many other changes from the original manga. Among them are the following:</p>
+     <ul>
+       <li>- When Tien Shinhan loses his arm while fighting Nappa, his arm becomes a stump with only a small amount of blood seen. In the manga, the scene is much more gory.</li>
+       <li>- In the manga, Frieza kills Cargo, but in the anime Dodoria kills him.</li>
+       <li>-In the manga, Zarbon informs Vegeta about Frieza's ability to transform during their first fight.
+         This was removed from the anime, but Vegeta still later tells Frieza that it was Zarbon who told him about Frieza's transformation ability.</li>
+       <li>- In the manga, Appule finds all the Namekians in the village attacked by Vegeta dead and tells Frieza, who just tells him to call the Ginyu Force.
+         In the anime, the soldier is changed to another soldier referred to as "Orlen" in the closed captioning for the Ocean Dub VHS tapes.
+         This soldier is killed by Frieza when he tells that he killed the last survivor of the village without asking him where Vegeta was.</li>
+         <li>- In the manga, after Frieza survives Goku's Spirit Bomb, he immediately strikes down Piccolo with his Death Beam technique, but in the anime, he fires his beam at Goku, only for Piccolo to jump in the way and get struck down by the beam anyway.</li>
+         <li>- In the manga, Frieza's full power was still never a match for Goku's Super Saiyan form, but in the anime, Frieza appears to have the upper hand for a short time before he begins to tire.</li>
+         <li>- In the anime, when Vegeta is brought back to life on Planet Namek, he manages to witness some of the battle between Goku and Frieza, as well as Goku's Super Saiyan form, before being teleported to Earth by the Namekian Dragon Balls.
+            In the manga, he is teleported to Earth almost immediately after being revived and does not get a chance to see Goku as a Super Saiyan for the first time until Goku returns to Earth himself later on.</li>
+          <li>- When Dr. Gero first appears in the series (as Android 20), he grabs a man by the neck and tears him through the roof of a car.
+              In the original manga, he crushes the man's neck afterwards, tearing his head off.</li>
+          <li>- In the manga, when Goku fully recovers from the Heart Virus, Chi-Chi finds him simply looking out the window of the bedroom he was resting in at Kame House.
+                In the anime, however, Chi-Chi finds him outside the house, firing several Kamehameha blasts across the ocean.</li>
+          <li>- During Gohan and Cell's Beam Struggle in the anime, Piccolo, Krillin, Tien, and Yamcha unsuccessfully try to distract Cell before Vegeta succeeds in doing so, whereas in the manga, they all simply observe the struggle and Vegeta is the only one to attack Cell from behind.</li>
+          <li>- When Vegeta shoots a Galick Blazer at Cell, he is seen in his Super Saiyan form in the anime. However, in the manga, he is seen in his base form.
+            Similarly, Goku's spirit is seen in his Super Saiyan form in the anime as he and Gohan perform the Father-Son Kamehameha against Cell, while he is seen in his base form in the manga.</li>
+          <li>- When Goku begins his battle against Kid Buu in the manga, he transforms immediately into his Super Saiyan 3 form.
+             In the anime, however, Goku starts the battle as a Super Saiyan 2, and manages to hold his own against Kid Buu for a while before ascending to Super Saiyan 3.</li>
+     </ul>
+     <h3>Impact and Reception</h3>
+     <p>The impact of Dragon Ball Z is enormous. For more than 20 years, the series has stood the test of time and has reached out to many children and adults alike across the globe.
+     This is mainly due to the series' very clear representations of good overpowering evil, love overpowering hate, the importance of family and friends, and an unyielding passion toward achieving goals.
+     The series also featured heavy sci-fi overtones, and a greater emphasis on fighting - making it extremely popular among adolescent boys who had grown up alongside the original series.</p>
+     <p>Dragon Ball Z has also played a large part in contributing to the popularity of anime in western culture. Though the first two seasons of the series were played on various networks in the U.S. in 1996, it would not take off for two more years until August 31, 1998, when Cartoon Network featured the show in its action-oriented Toonami lineup.
+    Toonami heralded the show as "The Greatest Action Cartoon Ever Made," and it greatly boosted the popularity of Toonami, but unknowingly did so much more. Dragon Ball Z's newfound popularity helped to bring about a greater interest in Japanese cartoons in the eyes of western youth, which in turn fueled the western anime industry to new heights.
+    Because of its success on Toonami, Dragon Ball Z was the first anime that made its way to the Wall Street Journal, who declared it "A Huge Cartoon Hit."</p>
+    <p>Many items such as apparel, backpacks, lunch boxes, writing utensils, candies, drinks, foods and more feature Dragon Ball Z, in both Japan and North America.
+    Action figures, collectible figurines, plush toys, bobble heads, and character model kits were also made. The fast food chain Burger King featured Dragon Ball Z toys twice in the early 2000's.
+    Despite the TV series officially ending in Japan in 1996, and in 2003 in North America, Dragon Ball Z video games are created nearly every year for almost every console on the market, helping to introduce the Dragon Ball Z series to younger generations that never got a chance to see it air on television.
+    These games usually do very well in the market. Popular sites such as YouTube have attracted large Dragon Ball Z fan communities over the course of the last few years, and Dragon Ball related videos receive many views.
+    All of these examples showcase the incredible popularity of Dragon Ball Z in many countries of the world.</p>
     <svg id="canvas" width="100%" viewBox="0 0 200 100">
     </svg>
     <script src="final_project.js"></script>
   </body>
-</html>
+</html></div>
